SERVER-97860: Fix index eligibility check for express. (#30145)

GitOrigin-RevId: 4672489cf0e0398a5f7b402d5c5668c1a7346932